OCEPROJECT-2882 - Fixed thumbnail image display issue on mobile. They were showing at full width due to a display: inline-block command. Changed it to display: block.
Removed padding between thumbnail cards on mobile that was causing too much spacing.

--- a/CancerGov/_src/StyleSheets/_home.scss
+++ b/CancerGov/_src/StyleSheets/_home.scss
@@ -283,7 +283,7 @@ a.learn-more {
 		margin-top: 1em;
 	}
 	.image-hover {
-		display: inline-block;
+		display: block;
 
 		&:hover, &:focus {
 			background-color: #000;
@@ -297,9 +297,6 @@ a.learn-more {
 		a {
 			@extend %card-link-hover;
 		}
-	}
-	@media screen and (max-width: 640px) {
-		@include card-clickable;
 	}
 }
 
